--- a/ansible/inventories/qa.yml
+++ b/ansible/inventories/qa.yml
@@ -1,12 +1,12 @@
 ---
 all:
-  children:
-    app_servers:
-      hosts:
-        qa-vm:
-          ansible_host: "{{ lookup('env', 'qa_VM_IP') }}"
-          ansible_user: azureuser
-          ansible_ssh_private_key_file: "{{ lookup('env', 'SSH_KEY_PATH') }}"
-          env_name: qa
-          acr_name: "{{ lookup('env', 'ACR_NAME') }}"
-          app_image_tag: "{{ lookup('env', 'IMAGE_TAG') }}"
+    children:
+        app_servers:
+            hosts:
+                qa-vm:
+                    ansible_host: "{{ lookup('env', 'QA_VM_IP') }}"
+                    ansible_user: azureuser
+                    ansible_ssh_private_key_file: "{{ lookup('env', 'SSH_KEY_PATH') }}"
+                    env_name: qa
+                    acr_name: "{{ lookup('env', 'ACR_NAME') }}"
+                    app_image_tag: "{{ lookup('env', 'IMAGE_TAG') }}"
