--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -106,8 +106,17 @@ jobs:
               with:
                   python-version: "3.11"
 
+            - name: Cache pip dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.cache/pip
+                key: ${{ runner.os }}-pip-ansible-docker
+                restore-keys: |
+                  ${{ runner.os }}-pip-
+
             - name: Install Ansible
               run: |
+                  python -m pip install --upgrade pip
                   pip install ansible docker
                   ansible-galaxy collection install community.docker
 
