--- a/ansible/inventories/prod.yml
+++ b/ansible/inventories/prod.yml
@@ -7,6 +7,6 @@ all:
                     ansible_host: "{{ lookup('env', 'PROD_VM_IP') }}"
                     ansible_user: azureuser
                     ansible_ssh_private_key_file: "{{ lookup('env', 'SSH_KEY_PATH') }}"
-                    env_name: prod
+                    env_name: production
                     acr_name: "{{ lookup('env', 'ACR_NAME') }}"
                     app_image_tag: "{{ lookup('env', 'IMAGE_TAG') }}"
