--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -33,14 +33,8 @@
 
       - name: Main Deployment and Rollback Block
         block:
-            - name: Stop existing container (free memory first!)
-              docker_container:
-                  name: "{{ container_name }}"
-                  state: stopped
-              ignore_errors: yes
-
             - name: Remove existing container
-              docker_container:
+              community.docker.docker_container:
                   name: "{{ container_name }}"
                   state: absent
               ignore_errors: yes
@@ -50,7 +44,7 @@
                   seconds: 5
 
             - name: Pull Docker image from ACR
-              docker_image:
+              community.docker.docker_image:
                   name: "{{ acr_name }}.azurecr.io/app"
                   tag: "{{ app_image_tag }}"
                   source: pull
@@ -62,13 +56,19 @@
               ignore_errors: yes
 
             - name: Start new container
-              docker_container:
+              community.docker.docker_container:
                   name: "{{ container_name }}"
                   image: "{{ acr_name }}.azurecr.io/app:{{ app_image_tag }}"
                   state: started
                   restart_policy: always
+                  networks:
+                    - name: app-net
+                  labels:
+                    "traefik.enable": "true"
+                    "traefik.http.routers.app.rule": "HostRegexp(`.*`)"
+                    "traefik.http.services.app.loadbalancer.server.port": "80"
                   env:
-                      APP_ENV: "production"
+                      APP_ENV: "{{ env_name }}"
                       APP_KEY: "{{ lookup('env', 'APP_KEY') }}"
                       LOG_LEVEL: "info"
                       APP_DEBUG: "false"
