--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -62,11 +62,11 @@
                   state: started
                   restart_policy: always
                   networks:
-                    - name: app-net
+                      - name: app_app-net
                   labels:
-                    "traefik.enable": "true"
-                    "traefik.http.routers.app.rule": "HostRegexp(`.*`)"
-                    "traefik.http.services.app.loadbalancer.server.port": "80"
+                      "traefik.enable": "true"
+                      "traefik.http.routers.app.rule": "HostRegexp(`.*`)"
+                      "traefik.http.services.app.loadbalancer.server.port": "80"
                   env:
                       APP_ENV: "{{ env_name }}"
                       APP_KEY: "{{ lookup('env', 'APP_KEY') }}"
