not using custom img

--- a/terragrunt/modules/azure-iaas-app-service/cloud-init-app.yaml
+++ b/terragrunt/modules/azure-iaas-app-service/cloud-init-app.yaml
@@ -84,6 +84,8 @@ write_files:
 runcmd:
     - mkdir -p /opt/app
 
+    - sudo apt install -y docker.io docker-compose
+
     - usermod -aG docker azureuser
 
     - systemctl enable docker
