--- a/terragrunt/modules/azure-iaas-app-service/cloud-init-app.yaml
+++ b/terragrunt/modules/azure-iaas-app-service/cloud-init-app.yaml
@@ -91,14 +91,14 @@ runcmd:
     # - systemctl enable docker
     # - systemctl start docker
 
-    # - sleep 10
+    - sleep 10
     # - until docker info >/dev/null 2>&1; do echo "Waiting for docker..."; sleep 2; done
 
-    # - echo "${acr_admin_password}" | docker login ${acr_login_server} -u ${acr_admin_username} --password-stdin
+    - echo "${acr_admin_password}" | docker login ${acr_login_server} -u ${acr_admin_username} --password-stdin
 
-    # - cd /opt/app && docker-compose pull
+    - cd /opt/app && docker-compose pull
 
-    # - echo "Waiting for database to be ready..."
+    - echo "Waiting for database to be ready..."
 
-    # - /opt/app/wait-for-db.sh
-    # - test $? -eq 0 && cd /opt/app && docker-compose up -d && echo "App stack started successfully" || echo "Failed to start app - database not available"
+    - /opt/app/wait-for-db.sh
+    - test $? -eq 0 && cd /opt/app && docker-compose up -d && echo "App stack started successfully" || echo "Failed to start app - database not available"
